layout fixes, new cropped logo in nav

--- a/css/main.css
+++ b/css/main.css
@@ -31,10 +31,11 @@ h3 {
 
 main section {
     position: relative;
+    padding: 150px 0;
 }
 
-main section {
-    padding: 150px 0;
+.section-main {
+    padding: 100px 0;
 }
 
 footer {
@@ -45,6 +46,7 @@ footer {
     margin-top: 89px;
     height: 600px;
     color: rgb(255, 255, 255);
+    padding: 0;
 }
 
 #ueber-uns {
@@ -156,7 +158,7 @@ nav ul li:first-child img {
     top: 0;
     bottom: 0;
     margin: auto 0;
-    max-width: 75%;
+    height: 59px;
 }
 
 nav ul li:not(:first-child):after {
@@ -278,4 +280,15 @@ nav ul li:hover:after {
 
 .partners-image {
     background-image: url(../img/partners.jpg);
+}
+
+.active {
+    -webkit-transition: .25s;
+    transition: .25s;
+    background-color: rgb(0, 115, 51);
+    color: white !important;
+}
+
+.active:hover {
+    background-color: rgb(0, 95, 31);
 }
